language update  refs #3430

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -32,6 +32,7 @@
         "ChooseLanguage": "Sélectionnez la langue",
         "ChoosePeriod": "Sélectionnez la période",
         "ChooseWebsite": "Sélectionnez le site web",
+        "Clear": "Réinitialiser",
         "ClickHere": "Cliquez ici pour plus d'informations.",
         "ClickToChangePeriod": "Cliquez à nouveau pour modifier la période.",
         "Close": "Fermer",
@@ -140,6 +141,7 @@
         "EncryptedSmtpTransport": "Entrez la couche de chiffrement requise par votre serveur SMTP.",
         "EnglishLanguageName": "French",
         "Error": "Erreur",
+        "ErrorRequest": "Oups... Il y a eu un problème pendant le traitement de la requête. Peut être que le serveur a eu un soucis temporaire, ou peut être que vous avez demandé un rapport avec trop de données. Veuillez réssayer. Si cette erreur se répète veuillez %scontacter voter administrateur Piwik%s pour obtenir de l'aide.",
         "EvolutionOverPeriod": "Évolution sur la période",
         "EvolutionSummaryGeneric": "%1$s en %2$s comparé à %3$s en %4$s. Evolution: %5$s",
         "ExceptionCheckUserHasSuperUserAccessOrIsTheUser": "L'utilisateur doit être un Super Utilisateur ou l'utilisateur \"%s\" lui-même.",
@@ -164,9 +166,12 @@
         "ExceptionPrivilege": "Vous ne pouvez accéder à cette ressource, ceci requiert un accès de type %s.",
         "ExceptionPrivilegeAccessWebsite": "Vous ne pouvez pas accéder à cette ressource, ceci requiert un accès de type %s pour le site id = %d.",
         "ExceptionPrivilegeAtLeastOneWebsite": "Vous ne pouvez accéder à cette ressource, ceci requiert au moins un accès de type %s à un site web.",
+        "ExceptionReportNotEnabled": "Le rapport demandé n'est pas activé. Ceci signifie d'habitude ou que le composant additionnel qui définit le rapport est désactivé ou bien que vous n'avez pas assez de permissions pour accéder à ce rapport.",
+        "ExceptionReportNotFound": "Le rapport demandé n'existe pas.",
         "ExceptionUnableToStartSession": "Impossible de démarrer une session.",
         "ExceptionUndeletableFile": "Impossible de supprimer %s",
         "ExceptionUnreadableFileDisabledMethod": "Le fichier de configuration {%s} n'a pas pu être lu. votre hébergeur a probablement désactivé %s.",
+        "ExceptionWidgetNotFound": "Le gadget demandé n'existe pas.",
         "ExpandDataTableFooter": "Modifier la visualisation ou configurer le rapport",
         "Export": "Exporter",
         "ExportAsImage": "Exporter au format Image",
@@ -301,6 +306,7 @@
         "Password": "Mot de passe",
         "Period": "Période",
         "Piechart": "Camembert",
+        "PiwikIsACollaborativeProjectYouCanContributeAndDonate": "%1$sPiwik%2$s est un projet collaboratif réalisé pour vous par les membres de %7$sl'équipe Piwik%8$s ainsi que de nombreux autres contributeurs du monde entier. Si vous êtes fan de Piwik, vous pouvez aider: trouvez %3$scomment participer à Piwik%4$s, ou %5$sdonnez maintenant%6$s pour aider à financer Piwik 3.0!",
         "PiwikXIsAvailablePleaseNotifyPiwikAdmin": "%1$s est disponible. Veuillez informer %2$sl'administrateur Piwik%3$s.",
         "PiwikXIsAvailablePleaseUpdateNow": "Piwik %1$s est maintenant disponible. %2$s Merci de mettre à jour!%3$s (voir %4$s les modifications%5$s).",
         "PleaseSpecifyValue": "Merci de spécifier une valeur pour %s",
@@ -455,6 +461,7 @@
         "ChooseHttpTimeout": "Choisir la valeur du timeout HTTP",
         "ChooseMetric": "Choisissez un métrique",
         "ChooseReport": "Choisir un rapport",
+        "ChooseSegment": "Sélectionner segment",
         "ConfirmRemoveAccount": "Souhaitez-vous supprimer ce compte ?",
         "DefaultReportDate": "Date du rapport",
         "EmailUs": "Nous écrire",
@@ -466,6 +473,7 @@
         "HowtoLoginAnonymous": "Laissez le login et le mot de passe vide pour une connexion anonyme.",
         "HttpIsNotSecureWarning": "Votre token d'authentification Piwik (token_auth) est envoyée en texte clair si vous utilisez \"HTTP\". Pour cette raison, nous recommandons d'utiliser HTTPS pour sécuriser le transport des données sur Internet. Voulez-vous le faire ?",
         "HttpTimeout": "Timeout HTTP",
+        "IgnoreSslError": "Ignorer les erreurs SSL",
         "IncompatiblePiwikVersion": "La version de Piwik que vous utilisez est incompatible avec Piwik Mobile 2. Mettez à jour votre installation de Piwik et essayez à nouveau ou bien installez Piwik Mobile 1.",
         "LastUpdated": "Dernière mise à jour : %s",
         "LoadingReport": "Chargement %s",
@@ -486,6 +494,8 @@
         "NoVisitorsShort": "Aucun visiteur",
         "NoWebsiteFound": "Aucun site trouvé",
         "NoWebsitesShort": "Pas de site internet",
+        "PossibleSslError": "Erreur potentielle de certificat SSL",
+        "PossibleSslErrorExplanation": "Une erreur peut être causée par un certificat invalide ou auto-signé: \"%s\". La connexion peut fonctionner pour vous en ignorant la validation SSL mais cela est moins sécurisé. Vous pouvez modifier la validation SSL à n'importe quel moment depuis les paramètres.",
         "PullDownToRefresh": "Faites glisser vers le bas pour actualiser",
         "RatingDontRemindMe": "Ne pas me rappeler",
         "RatingNotNow": "Pas maintenant",
@@ -504,6 +514,7 @@
         "TopVisitedWebsites": "Les sites les plus visités",
         "TryIt": "Essayez le !",
         "UseSearchBarHint": "Seuls les %s premiers sites Internet sont affichés ici. Veuillez utiliser la barre de recherche pour accéder aux autres sites Internet.",
+        "ValidateSslCertificate": "Valider le certificat SSL",
         "VerifyAccount": "Vérification du compte",
         "VerifyLoginData": "Verifier votre nom d'utilisateur et votre mot de passe.",
         "YouAreOffline": "Désolé, vous êtes actuellement déconnecté(e)"
