--- a/lang/it.json
+++ b/lang/it.json
@@ -66,6 +66,8 @@
         "ColumnNbActionsDocumentation": "Il numero delle azioni eseguite dai tuoi visitatori. Possono essere pagine viste, download o click su un outlink.",
         "ColumnNbUniqVisitors": "Visitatori unici",
         "ColumnNbUniqVisitorsDocumentation": "Il numero di visitatori non duplicati sul tuo sito Web. Ogni utente viene conteggiato una sola volta, anche se visita il sito Web più volte al giorno.",
+        "ColumnNbUsers": "Utenti",
+        "ColumnNbUsersDocumentation": "Numero di utenti collegati al tuo sito. È il numero di utenti unici attivi che hanno un ID Utente impostato (attraverso la funzione codice di Tracciamento 'SetUserId').",
         "ColumnNbVisits": "Visite",
         "ColumnNbVisitsDocumentation": "Se un visitatore arriva sul tuo sito Web per la prima volta o se visita una pagina dopo più di 30 minuti dalla sua ultima visualizzazione di pagina, questo sarà registrato come una nuova visita.",
         "ColumnPageBounceRateDocumentation": "La percentuale di visite che iniziato su questa pagina e che abbandonano immediatamente il sito Web.",
@@ -271,6 +273,7 @@
         "NotValid": "%s non è valido",
         "NSeconds": "%s secondi",
         "NumberOfVisits": "Numero di visite",
+        "NUsers": "%s utenti",
         "NVisits": "%s visite",
         "Ok": "Ok",
         "OneAction": "1 azione",
@@ -404,6 +407,7 @@
         "Unknown": "Sconosciuto",
         "Upload": "Carica",
         "UsePlusMinusIconsDocumentation": "Usare le icone + e - per navigare.",
+        "UserId": "ID Utente",
         "Username": "Nome utente",
         "UseSMTPServerForEmail": "Usa un server SMTP per le e-mail",
         "Value": "Valore",
