--- a/lang/pl.json
+++ b/lang/pl.json
@@ -4,9 +4,12 @@
         "AboutPiwikX": "O Piwik %s",
         "Action": "Aktywność",
         "Actions": "Aktywność",
+        "Add": "Dodaj",
         "AfterEntry": "Po wprowadzeniu tutaj",
+        "All": "Wszystko",
         "AllowPiwikArchivingToTriggerBrowser": "Pozwól Piwik na archiwizację podczas przeglądania raportów w przeglądarce",
         "AllWebsitesDashboard": "Tablica analiz wszystkich stron",
+        "And": "i",
         "API": "API",
         "ApplyDateRange": "Zastosuj dla tego zakresu dat",
         "ArchivingInlineHelp": "Dla serwisów o średnim i wysokim natężeniu ruchu, zalecane jest wyłączenie archiwizacji danych Piwik podczas przeglądania raportów w przeglądarce. Zamiast tego zaleca się skonfigurowanie żądania cron, by przetwarzanie raportów Piwik następowało co godzinę.",
@@ -16,15 +19,19 @@
         "AveragePrice": "Średnia cena",
         "AverageQuantity": "Średnia ilość",
         "BackToPiwik": "Powrót do Piwik",
+        "Broken": "Uszkodzony",
+        "Cancel": "Anuluj",
         "ChangePassword": "Zmień hasło",
         "ChooseDate": "Zakres dat",
         "ChooseLanguage": "Wybierz język",
         "ChoosePeriod": "Wybierz okres",
         "ChooseWebsite": "Wybierz stronę",
+        "Clear": "Wyczyść",
         "ClickHere": "Kliknij tutaj, aby uzyskać więcej informacji.",
         "Close": "Zamknij",
         "ColumnActionsPerVisit": "Ilość akcji przypadających na wizytę",
         "ColumnActionsPerVisitDocumentation": "Średnia liczba akcji (odsłon, pobrań plików lub kliknięć w linki wychodzące) na wizytę.",
+        "ColumnAverageGenerationTime": "Średni czas generowania",
         "ColumnAverageTimeOnPage": "Średni czas przebywania na stronie",
         "ColumnAverageTimeOnPageDocumentation": "Średni czas jaki odwiedzający spędzają na tej stronie (tylko na tej stronie, nie na całym serwisie)",
         "ColumnAvgTimeOnSite": "Średni czas na stronie",
@@ -36,12 +43,14 @@
         "ColumnBouncesDocumentation": "Liczba wizyt, które zaczęły się i skończyły na tej stronie. Oznacza to, że odwiedzający opuścił serwis oglądając tylko tą jedną podstronę.",
         "ColumnConversionRate": "Współczynnik przetwarzania",
         "ColumnConversionRateDocumentation": "Procent wizyt, które doprowadziły do konwersji.",
+        "ColumnDestinationPage": "Strona docelowa",
         "ColumnEntrances": "Wejścia",
         "ColumnEntrancesDocumentation": "Liczba wizyt, które rozpoczęły się na tej stronie.",
         "ColumnExitRate": "Współczynnik wyjść",
         "ColumnExitRateDocumentation": "Wizyty, które zakończyły się po oglądnięciu tej podstrony.",
         "ColumnExits": "Wyjścia",
         "ColumnExitsDocumentation": "Liczba wizyt, które zakończyły się na tej stronie.",
+        "ColumnGenerationTime": "Czas generowania",
         "ColumnKeyword": "Słowo kluczowe",
         "ColumnLabel": "Etykieta",
         "ColumnMaxActions": "Maksymalna ilość działań podczas jednej wizyty",
@@ -49,6 +58,7 @@
         "ColumnNbActionsDocumentation": "Liczba akcji wykonana przez Twoich odwiedzających. Akcją mogą być odsłony, pobrania plików lub kliknięcia w linki wychodzące.",
         "ColumnNbUniqVisitors": "Liczba niepowtarzających się użytkowników",
         "ColumnNbUniqVisitorsDocumentation": "Liczba nie zduplikowanych użytkowników odwiedzających twoją witrynę. Każdy użytkownik jest liczony tylko raz, nawet jeśli odwiedza stronę kilka razy dziennie.",
+        "ColumnNbUsers": "Użytkownicy",
         "ColumnNbVisits": "użytkownicy",
         "ColumnNbVisitsDocumentation": "Jeśli odwiedzający wchodzi na stronę po raz pierwszy lub gdy odwiedza stronę po 30 minut, to zostanie zapisany jako nowa wizyta.",
         "ColumnPageviews": "Liczba odsłon",
@@ -56,6 +66,7 @@
         "ColumnPercentageVisits": "% odsłon",
         "ColumnRevenue": "Przychody",
         "ColumnSumVisitLength": "Ogólny czas spędzony przez odwiedzającego (w sekundach)",
+        "ColumnTotalPageviews": "Łącznie odwiedzin stron",
         "ColumnUniqueEntrances": "Unikalnych wejść",
         "ColumnUniqueExits": "Unikalnych wyjść",
         "ColumnUniquePageviews": "Liczba odsłon niepowtarzających się",
@@ -64,11 +75,14 @@
         "ColumnVisitDuration": "Czas pobytu (w sekundach)",
         "ColumnVisitsWithConversions": "Wizyty z przeniesieniami",
         "ConfigFileIsNotWritable": "Plik konfiguracyjny Piwik %s nie ma ustawionych praw do zapisu, zmiany poczynione nie mogły więc zostać zapisane. %s Zmień przez chmod uprawnienia do zapisu pliku konfiguracyjnego.",
+        "Continue": "Kontunuuj",
         "ContinueToPiwik": "Idź do Piwik",
         "CurrentMonth": "bieżący miesiąc",
         "CurrentWeek": "bieżący tydzień",
         "CurrentYear": "bieżący rok",
         "Daily": "Codziennie",
+        "DailyReport": "dziennie",
+        "DailyReports": "Raporty dzienne",
         "DailySum": "Kwota dzienna",
         "DashboardForASpecificWebsite": "Tablica analiz dla wybranej strony",
         "Date": "Data",
@@ -89,15 +103,20 @@
         "DayTu": "Wt",
         "DayWe": "Śr",
         "Default": "Domyślne",
+        "DefaultAppended": "(domyślny)",
         "Delete": "Usuń",
         "Description": "Opis",
+        "Desktop": "Pulpit",
         "Details": "Szczegóły",
         "Discount": "Rabat",
         "DisplaySimpleTable": "Uproszczony widok tabeli",
         "DisplayTableWithGoalMetrics": "Widok tabeli z danymi o celach",
         "DisplayTableWithMoreMetrics": "Widok tabeli z większą ilością danych",
+        "Documentation": "Dokumentacja",
+        "Donate": "Ofiaruj",
         "Done": "Wykonano",
         "Download": "Pobierz",
+        "DownloadFail_FileExists": "Plik %s istnieje!",
         "DownloadFullVersion": "%1$sPobierz%2$s wersję pełną! Zobacz %3$s",
         "Downloads": "Pobrania",
         "EcommerceOrders": "Zamówienia e-commerce",
@@ -130,14 +149,18 @@
         "ExceptionUnableToStartSession": "Nie można uruchomić sesji.",
         "ExceptionUndeletableFile": "Nie można skasować %s",
         "ExceptionUnreadableFileDisabledMethod": "Plik konfiguracyjny {%s} nie ma praw do odczytu. Twój hosting mógł zablokować %s.",
+        "ExpandDataTableFooter": "Zmienić wizualizację lub skonfigurować raport",
         "Export": "Eksport",
         "ExportAsImage": "Eksport jako obraz",
         "ExportThisReport": "Eksport danych w innych formatach",
         "Faq": "FAQ",
         "FileIntegrityWarningExplanation": "Weryfikacja integralności plików nie powiodła się i odnotowano pewne błędy. Jest to spowodowane najczęściej brakiem lub częściowym przesłaniem plików należących do Piwik. Należy ponowić wgranie wszystkich plików Piwik w trybie BINARNYM i odświeżyć wyświetlanie tej strony do czasu aż znikną wyświetlane błędy.",
         "First": "Pierwszy",
+        "Flatten": "Płaski",
         "ForExampleShort": "np.",
+        "Forums": "Forum",
         "FromReferrer": "z",
+        "GeneralInformation": "Ogólne informacje",
         "GeneralSettings": "Konfiguracja podstawowa",
         "GiveUsYourFeedback": "Zdaj relację!",
         "Goal": "Cel",
@@ -145,17 +168,21 @@
         "GraphHelp": "Więcej informacji na temat wyświetlania grafik znajdziesz na stronach Piwik.",
         "HelloUser": "Witaj, %s!",
         "Help": "Pomoc",
+        "Hide": "ukryj",
         "HoursMinutes": "%1$s godzin %2$s min",
         "Id": "Nr",
         "IfArchivingIsFastYouCanSetupCronRunMoreOften": "Ustawiając szybszą archiwizację w konfiguracji, możesz skonfigurować crontab by uruchamiał się częściej.",
+        "Installed": "Zainstalowany",
         "InvalidDateRange": "Błędny zakres dat, wybierz ponownie",
         "InvalidResponse": "Otrzymane dane nie są prawidłowe.",
+        "IP": "IP",
         "JsTrackingTag": "Kod śledzący w JavaScript",
         "Language": "Język",
         "LastDays": "w czasie ostatnich %s dni (włączając dzisiejszy)",
         "LayoutDirection": "ltr",
         "Loading": "Ładowanie...",
         "LoadingData": "Ładowanie danych...",
+        "LoadingPopover": "Ładowanie %s...",
         "Locale": "pl_PL.UTF-8",
         "Logout": "Wylogowanie",
         "LongDay_1": "Poniedziałek",
@@ -178,37 +205,61 @@
         "LongMonth_8": "Sierpień",
         "LongMonth_9": "Wrzesień",
         "MainMetrics": "Główne wskaźniki",
+        "Matches": "Pasuje",
         "MediumToHighTrafficItIsRecommendedTo": "Dla serwisów o średnim natężeniu ruchu, zaleca się przetwarzanie raportowania dziennego najwyżej do pół godziny (%s sekund) lub co godzinę (%s sekund).",
         "Metadata": "Metadata",
         "MetricsToPlot": "Dane do porównania",
         "MinutesSeconds": "%1$s min %2$ss",
         "Monthly": "Miesięcznie",
+        "MonthlyReport": "miesięcznie",
+        "MonthlyReports": "Raporty miesięczne",
+        "More": "Więcej",
+        "MoreDetails": "Więcej",
+        "MoreLowerCase": "więcej",
         "MultiSitesSummary": "Wszystkie strony",
         "Name": "Nazwa",
         "NbActions": "Numer działań",
+        "NDays": "%s dni",
         "Never": "Nigdy",
         "NewReportsWillBeProcessedByCron": "Kiedy archiwizacja baz Piwik nie jest wywoływana przez przeglądarkę, nowe raporty będą jedynie przetwarzane przez crontab.",
         "NewUpdatePiwikX": "Najnowsza aktualizacja: Piwik %s",
         "NewVisitor": "Nowy oglądający",
         "NewVisits": "Nowe wizyty",
         "Next": "Dalej",
+        "NMinutes": "%s minut",
         "No": "Nie",
         "NoDataForGraph": "Brak danych dla tego wykresu.",
         "NoDataForTagCloud": "brak danych dla tej chmury tagów.",
         "NotDefined": "%s nie zdefiniowany",
+        "Note": "Uwagi",
+        "NotInstalled": "Niezainstalowany",
         "NotRecommended": "(nie zalecane)",
         "NotValid": "%s nie jest poprawny",
         "NSeconds": "%s sekundy",
         "NumberOfVisits": "Ilość odwiedzin",
+        "NUsers": "%s użytkowników",
         "NVisits": "%s wizyt",
         "Ok": "Ok",
+        "OneAction": "1 akcja",
         "OneDay": "1 dzień",
+        "OneMinute": "1 minuta",
         "OneVisit": "1 wizyta",
         "OnlyEnterIfRequired": "Wprowadź tylko nazwę użytkownika jeżeli twój serwer SMTP tego wymaga.",
         "OnlyEnterIfRequiredPassword": "Wprowadź tylko hasło użytkownika jeżeli twój serwer SMTP tego wymaga.",
         "OnlyUsedIfUserPwdIsSet": "Wybierz tylko jeśli nazwa użytkownika\/hasło jest ustawione, zapytaj swojego dostawcę usług, którą z metod powinieneś wybrać.",
         "OpenSourceWebAnalytics": "Analityka stron web w oparciu o kod Open Source",
+        "OperationAtLeast": "Co najmniej",
+        "OperationAtMost": "Co najwyżej",
+        "OperationContains": "Zawiera",
+        "OperationDoesNotContain": "Nie zawiera",
+        "OperationEquals": "Równa się",
+        "OperationGreaterThan": "Większy niż",
+        "OperationIs": "Jest",
+        "OperationIsNot": "Nie jest",
+        "OperationLessThan": "mniej niż",
+        "OperationNotEquals": "Nie równa się",
         "OptionalSmtpPort": "Opcjonalnie. Domyślnie jest to port 25 dla TLS SMTP niezaszyfrowanego, i 465 dla SSL SMTP.",
+        "Options": "Opcje",
         "OrCancel": "lub wykonaj %s krok wstecz %s",
         "OriginalLanguageName": "Polski",
         "Others": "Pozostałe",
@@ -233,21 +284,33 @@
         "ProductRevenue": "Przychody ze sprzedaży produktów",
         "PurchasedProducts": "Zakupione produkty",
         "Quantity": "Ilość",
+        "RangeReports": "Niestandardowe zakresy dat",
+        "ReadThisToLearnMore": "%1$sPrzeczytaj to żeby wiedzieć więcej.%2$s",
         "Recommended": "(zalecany)",
+        "Refresh": "Odśwież",
         "RefreshPage": "Odśwież stronę",
+        "RelatedReport": "Powiązany raport",
+        "RelatedReports": "Powiązane raporty",
+        "Remove": "Usuń",
         "Report": "Raport",
+        "ReportGeneratedFrom": "Ten raport został wygenerowany na podstawie dany z %s.",
         "Reports": "Raporty",
         "ReportsContainingTodayWillBeProcessedAtMostEvery": "Raporty dnia dzisiejszego (oraz inne w zakresie dat z dniem dzisiejszym włącznie) będą przetwarzane co każde",
         "ReportsWillBeProcessedAtMostEveryHour": "Raporty zostaną przetwarzane najwyżej co godzinę.",
         "RequestTimedOut": "Żądanie danych w procesie %s nie zostało wykonane w wyznaczonym czasie - time out. Spróbuj ponownie.",
         "Required": "%s wymagano",
         "ReturningVisitor": "Powróciło oglądających",
+        "ReturningVisitorAllVisits": "Zobacz wszytskie odwiedziny",
+        "Rows": "Wierszy",
         "RowsToDisplay": "Ilość wierszy",
         "Save": "Zapisz",
         "SaveImageOnYourComputer": "By zapisać wykres na swoim komputerze, kliknij na nim prawym przyciskiem myszy i wybierz \"Zapisz obrazek jako...",
         "Search": "Szukaj",
+        "SearchNoResults": "Brak wyników",
         "Seconds": "%ss",
+        "SeeAll": "Zobacz wszystko",
         "SeeTheOfficialDocumentationForMoreInformation": "Zobacz w %soficjalnej dokumentacjin%s, aby uzyskać więcej informacji.",
+        "Segment": "Segment",
         "SelectYesIfYouWantToSendEmailsViaServer": "Wybierz \"Tak\", jeśli chcesz lub musisz wysyłać e-mail za pośrednictwem serwera nazw, zamiast lokalnej obsługi przez zintegrowaną funkcję poczty",
         "Settings": "Konfiguracja",
         "Shipping": "Wysyłka",
@@ -270,16 +333,21 @@
         "ShortMonth_7": "VII",
         "ShortMonth_8": "VIII",
         "ShortMonth_9": "IX",
+        "Show": "pokaż",
         "SmallTrafficYouCanLeaveDefault": "Dla serwisów o małym natężeniu ruchu, możesz pozostawić domyślne %s sekund, by mieć dostęp do wszystkich raportów w czasie rzeczywistym.",
         "SmtpEncryption": "Szyfrowanie SMTP",
         "SmtpPassword": "Hasło SMTP",
         "SmtpPort": "Port SMTP",
         "SmtpServerAddress": "Adres serwera SMTP",
         "SmtpUsername": "Nazwa użytkownika SMTP",
+        "Source": "Źródło",
         "Subtotal": "Razem",
+        "Summary": "Podsumowanie",
         "Table": "Tabela",
         "TagCloud": "Chmura Tagów",
         "Tax": "Podatek",
+        "TimeAgo": "%s temu",
+        "TimeOnPage": "Czas na stronie",
         "Today": "dzisiaj",
         "Total": "Ogólnie",
         "TotalRevenue": "Przychody ogółem",
@@ -289,11 +357,13 @@
         "Unknown": "Nieznany",
         "Upload": "Wgraj",
         "UsePlusMinusIconsDocumentation": "Użyj ikony plus i minus po lewej stronie nawigacji.",
+        "UserId": "Użytkownik ID",
         "Username": "Nazwa użytkownika",
         "UseSMTPServerForEmail": "Użyj serwera SMTP dla wysyłania poczty e-mail",
         "Value": "Parametr",
         "VBarGraph": "Wykres słupkowy",
         "View": "Widok",
+        "ViewDocumentationFor": "Zobacz dokumentacje dla %1$s",
         "Visit": "Oglądający",
         "VisitConvertedGoal": "Odwiedziny przekształciły się w co najmniej jeden trafiony cel zgodny z założeniami",
         "VisitConvertedNGoals": "Odwiedziny przekształciły się %s jako osiągnięte cele ze zdefiniowanych wcześniej założeń",
@@ -307,11 +377,18 @@
         "VisitTypeExample": "Przykładowo, aby wybrać wszystkich odwiedzających, którzy powrócili na serwis, włączając tych, którzy zakupili coś podczas poprzednich wizyt, zapytanie API będzie zawierać %s",
         "Warning": "Ostrzeżenie",
         "WarningFileIntegrityNoManifest": "Weryfikacja integralności plików nie mogła zostać przeprowadzona z powodu braku pliku manifest.inc.php.",
+        "WarningFileIntegrityNoManifestDeployingFromGit": "W przypadku wdrażania Piwik z Git, komunikat ten jest prawidłowy.",
         "WarningFileIntegrityNoMd5file": "Weryfikacja integralności plików nie mogła zostać zakończona z powodu braku funkcji md5_file().",
         "WarningPasswordStored": "%sOstrzeżenie:%s To hasło zostanie zapisane w pliku konfiguracyjnym widocznym dla każdego, kto może mieć do niego dostęp.",
         "Website": "Strona WWW",
         "Weekly": "Tygodniowo",
+        "WeeklyReport": "tygodniowo",
+        "WeeklyReports": "Raporty tygodniowe",
+        "WellDone": "Dobra robota!",
         "Widgets": "Interfejs widżetów",
+        "XFromY": "%1$s z %2$s",
+        "YearlyReport": "rocznie",
+        "YearlyReports": "Raporty roczne",
         "YearsDays": "%1$s lat %2$s dni",
         "Yes": "Tak",
         "Yesterday": "wczoraj",
@@ -321,13 +398,48 @@
         "YourChangesHaveBeenSaved": "Twoje modyfikacje zostały zapisane pomyślnie."
     },
     "Mobile": {
+        "AboutPiwikMobile": "O Piwik Mobile",
         "AccessUrlLabel": "Dostęp etykiety adresowej URL Piwik",
+        "Account": "Konto",
+        "Accounts": "Konta",
+        "AddAccount": "Dodaj konto",
+        "AddPiwikDemo": "Dodaj Piwik Demo",
+        "Advanced": "Zaawansowane",
         "AnonymousAccess": "Dostęp anonimowy",
+        "ChooseReport": "Wybierz raport",
+        "ChooseSegment": "Wybierz segment",
+        "ConfirmRemoveAccount": "Czy chcesz usunąć to konto?",
         "DefaultReportDate": "Data raportu",
+        "EmailUs": "Wyślij nam wiadomośc email",
         "EnableGraphsLabel": "Wyświetlanie wykresów",
+        "IgnoreSslError": "Ignoruj błąd SSL",
+        "LastUpdated": "Ostatnia aktualizacja: %s",
+        "LoadingReport": "Ładowanie %s",
+        "LoginCredentials": "Uprawnienia",
+        "LoginUseHttps": "Użyj https",
         "MultiChartLabel": "Wyświetlanie linią z gwiazdek",
+        "NavigationBack": "Powrót",
+        "NetworkError": "Błąd sieci",
+        "NetworkErrorWithStatusCodeShort": "Błąd sieci %s",
         "NetworkNotReachable": "Sieć nie osiągalna",
+        "NoAccountIsSelected": "Musisz wybrać konto. Dodaj nowe konto jeśli go nie skonfigurowałeś.",
+        "NoDataShort": "Brak danych",
+        "NoPiwikAccount": "Brak konta Piwik?",
+        "NoReportsShort": "Brak raportów",
+        "NoVisitorFound": "Nie odnaleziono odwiedzającego",
+        "NoVisitorsShort": "Brak odwiedzających",
+        "NoWebsiteFound": "Nie znaleziono strony",
+        "NoWebsitesShort": "Brak stron",
+        "RatingDontRemindMe": "Nie przypominaj mi",
+        "RatingNotNow": "Nie teraz",
         "SaveSuccessError": "Prosimy sprawdzić ustawienia konfiguracyjne",
+        "ShowAll": "Pokaż wszystko",
+        "ShowLess": "Pokaż mniej",
+        "TryIt": "Wypróbuj!",
         "YouAreOffline": "Przepraszamy, obecnie jesteś odłączony"
+    },
+    "RowEvolution": {
+        "CompareRows": "Porównaj rekordy",
+        "MetricBetweenText": "od %s do %s"
     }
 }
