--- a/lang/tr.json
+++ b/lang/tr.json
@@ -24,6 +24,7 @@
         "ChooseLanguage": "Dil seçin",
         "ChoosePeriod": "Zaman aralığı seçin",
         "ChooseWebsite": "Web sayfası seçin",
+        "Clear": "Temizle",
         "ClickHere": "Daha fazla bilgi için buraya tıklayın.",
         "ClickToChangePeriod": "Aralığı değiştirmek için tekrar tıklayın.",
         "Close": "Kapat",
@@ -47,6 +48,7 @@
         "ColumnMaxActions": "Tek ziyarette maksimum eylem",
         "ColumnNbActions": "Eylemler",
         "ColumnNbUniqVisitors": "Tekil ziyaretçiler",
+        "ColumnNbUsers": "Kullanıcılar",
         "ColumnNbVisits": "Ziyaretler",
         "ColumnPageviews": "Sayfa gösterimleri",
         "ColumnPageviewsDocumentation": "Bu sayfanın kaç defa ziyaret edildiği",
@@ -321,6 +323,7 @@
         "UniquePurchases": "Tekil Satın Alımlar",
         "Unknown": "Bilinmeyen",
         "Upload": "Yükle",
+        "UserId": "Kullanıcı ID",
         "Username": "Kullanıcı adı",
         "UseSMTPServerForEmail": "E-posta için SMTP sunucu kullan",
         "Value": "Değer",
