--- a/plugins/CoreAdminHome/lang/fr.json
+++ b/plugins/CoreAdminHome/lang/fr.json
@@ -11,6 +11,7 @@
         "DevelopmentProcess": "Bien que notre %sprocessus de développement%s inclue des milliers de tests automatisés, les béta testeurs jouent un rôle clef dans la réalisation de la \"politique zéro bug\" de Piwik.",
         "EmailServerSettings": "Paramètres du serveur mail",
         "FaviconUpload": "Sélectionnez un favicon à télécharger",
+        "FileUploadDisabled": "Le téléversement de fichiers n'est pas activé dans votre configuration PHP. Pour téléverser un logo personnalisé veuillez définir %s dans php.ini et redémarrer votre serveur web.",
         "ForBetaTestersOnly": "Pour les bêta testeurs uniquement",
         "ImageTracking": "Suivi par Image",
         "ImageTrackingIntro1": "Quand un visiteur désactive JavaScript, ou quand JavaScript ne peut être utilisé, vous pouvez utiliser le lien de suivi par image pour suivre les visiteurs.",
@@ -50,6 +51,7 @@
         "LogoNotWriteableInstruction": "Pour utiliser votre propre logo personnalisé à la place du logo par défaut de Piwik, attribuez des permissions en écriture sur ce répertoire : %1$s Piwik a besoin d'un accès en écriture aux fichiers pour stocker vos logos %2$s.",
         "LogoUpload": "Sélectionnez le logo à télécharger",
         "LogoUploadHelp": "Veuillez télécharge un file dans un des formats suivants %s avec une hauteur minimale de %s pixels.",
+        "MenuDevelopment": "Développement",
         "MenuDiagnostic": "Diagnostique",
         "MenuGeneralSettings": "Paramètres généraux",
         "MenuManage": "Gérer",
