--- a/plugins/CoreHome/lang/pl.json
+++ b/plugins/CoreHome/lang/pl.json
@@ -3,6 +3,7 @@
         "CategoryNoData": "Brak danych w tej kategorii. Spróbuj opcji \"Uwzględnij całą populację\".",
         "CheckForUpdates": "Sprawdź aktualizacje",
         "CheckPiwikOut": "Sprawdź Piwik!",
+        "ClickRowToExpandOrContract": "Kliknij ten wiersz aby rozwinić lub zwinąć tabelę podrzędną",
         "CloseWidgetDirections": "Możesz zamknąć ten widżet klikając na ikonie 'X' na górze widżetu.",
         "DataForThisReportHasBeenPurged": "Dane do tego raportu są starsze niż %s miesięcy i zostały wyczyszczone.",
         "DataTableExcludeAggregateRows": "Sumaryczne wiersze są widoczne %s Ukryj je",
@@ -14,7 +15,9 @@
         "DonateCall3": "Jeśli uważasz, że Piwik wniósł znaczącą wartość do Twojej firmy lub przedsięwzięcia, %1$srozważ przekazanie dotacji!%2$s",
         "DonateFormInstructions": "Kliknij na suwaku aby wybrać ilość, następnie kliknij subskrybuj aby wesprzeć.",
         "ExternalHelp": "Pomoc (otworzy się w nowym oknie)",
+        "FlattenDataTable": "Raport jest hierarchiczny %s Przełącz na płaski",
         "HowMuchIsPiwikWorth": "Ile Piwik jest warty dla Ciebie?",
+        "IncludeRowsWithLowPopulation": "Wiersze z niską populacją zostały ukryte %s Pokaż wszystkie wiersze",
         "InjectedHostEmailBody": "Witaj, próbowałem dostać się dzisiaj do Piwika i napotkałem ostrzeżenie o nieznanym hoście.",
         "InjectedHostEmailSubject": "Piwik został otwarty z nieznaną nazwą hosta: %s",
         "InjectedHostSuperUserWarning": "Piwik mógł zostać błędnie skonfigurowany (np. jeśli Piwik został ostatnio przeniesiony na nowy serwer lub adres URL). Możesz %1$skliknąć tutaj i dodać %2$s jako prawidłową nazwę hosta Piwik (jeśli jej ufasz)%3$s, lub %4$skliknąć tutaj aby przejść do %5$s aby uzyskać bezpieczny dostęp do Piwik'a%6$s.",
