--- a/plugins/Dashboard/lang/pl.json
+++ b/plugins/Dashboard/lang/pl.json
@@ -3,15 +3,23 @@
         "AddAWidget": "Dodaj Widżet",
         "AddPreviewedWidget": "Dodaj obejrzane widżety do tablicy",
         "ChangeDashboardLayout": "Zmień wygląd tablicy analiz",
+        "CreateNewDashboard": "Utwórz nową tablicę analiz",
         "Dashboard": "Tablica statystyk",
+        "DashboardName": "Nazwa tablicy analiz:",
         "DeleteWidgetConfirm": "Czy jesteś pewien, że chcesz usunąć ten widżet z tej tablicy statystyk?",
+        "EmptyDashboard": "Pusty panel - wskaż swóje ulubione gadżety",
         "LoadingWidget": "Ładowanie widżetu, proszę czekać...",
+        "ManageDashboard": "Zarządzaj tablicami analiz",
         "Maximise": "Maksymalizuj",
+        "NotUndo": "Nie będziesz mógł cofnąć tej operacji.",
         "PluginDescription": "Tablica analityki. Możesz skonfigurować swoją tablicę tak jak zaplanujesz: możesz dodać nowe widżety, zmienić porządek ich wyświetlania. Każdy z uprawnionych użytkowników może posiadać własną zindywidualizowaną tablicę statystyk.",
+        "RemoveDashboard": "Usuń tablicę analiz",
+        "RenameDashboard": "Zmień nawę tablicy analiz",
         "ResetDashboard": "Resetuj tablice analiz",
         "ResetDashboardConfirm": "Czy na pewno chcesz zresetować układ tablicy analiz?",
         "SelectDashboardLayout": "Proszę wybrać swój nowy wygląd tablicy analiz",
         "SelectWidget": "Wybierz widżet który chcesz dodać do tablicy statystyk",
+        "SetAsDefaultWidgets": "Ustaw wybrane gadżety jako domyślne",
         "WidgetNotFound": "Widżet nie został znaleziony",
         "WidgetPreview": "Podgląd widżetu",
         "WidgetsAndDashboard": "Widżety i Tablica analiz"
