--- a/plugins/DevicesDetection/lang/tr.json
+++ b/plugins/DevicesDetection/lang/tr.json
@@ -15,6 +15,7 @@
         "DeviceModel": "Cihaz modeli",
         "DevicesDetection": "Ziyaretçi Cihazları",
         "DeviceType": "Cihaz tipi",
+        "OperatingSystemFamilies": "İşletim Sistemi aileleri",
         "OperatingSystemVersions": "İşletim Sistemi versiyonları",
         "SmartDisplay": "Akıllı görüntüleme",
         "Smartphone": "Akıllı Telefon",
