--- a/plugins/Feedback/lang/ja.json
+++ b/plugins/Feedback/lang/ja.json
@@ -2,14 +2,24 @@
     "Feedback": {
         "ContactThePiwikTeam": "Piwik チームと連絡を取る！",
         "DoYouHaveBugReportOrFeatureRequest": "報告するべきバグや機能要望がありますか？",
+        "GetInTouch": "フィードバックありがとうございます。私たちは、いつもすべてのメッセージを読んでいます。簡単な挨拶から、ビジネス機会の共有、 Piwik コンサルタントの採用、あなたのサクセスストーリーなど、様々なアイデアや意見を教えてください。",
         "IWantTo": "あなたの希望：",
         "LearnWaysToParticipate": "あなたが参加できるすべての方法を%s学んでください%s",
         "ManuallySendEmailTo": "あなたのメッセージを手作業で次のアドレスへ送ってください：",
         "PluginDescription": "Piwik チームにフィードバックを送信します。 あなたのアイディアや提案を私たちと共有してください！",
+        "PrivacyClaim": "Piwik は あなたの %1$sprivacy%2$s を尊重します。あなたのデータに関する全ての管理はあなたにお任せします。",
+        "RateFeatureLeaveMessageDislike": "好きではない とのこと、非常に残念です。ぜひどのように改善すべきかお知らせください。",
+        "RateFeatureLeaveMessageLike": "気に入った　とのこと、とても嬉しいです !ぜひあなたの最も気に入った内容や今後のリクエストをお知らせください。",
+        "RateFeatureSendFeedbackInformation": "Piwik プラットフォームから 私たち ( Piwik チーム ) 宛に、あなたのメールアドレスを含む E メールが届きました。もし何かご質問があれば、私達にコンタクトを取って頂けます。",
         "RateFeatureThankYouTitle": "'%s' の評価をありがとう！",
+        "RateFeatureTitle": "'%s' の機能は好きですか ? ぜひ評価コメントを残してください。",
         "SendFeedback": "フィードバックを送信",
         "SpecialRequest": "Piwik チームに対して特別なリクエストがありますか？",
         "ThankYou": "私たちが Piwik をより良くするのを支援していただきありがとうございます！",
-        "VisitTheForums": "%sフォーラム%sにアクセスする"
+        "TopLinkTooltip": "あなたの意見をお知らせください。または、プロフェッショナルサポートをリクエストしてください。",
+        "ViewAnswersToFAQ": "%sFrequently Asked Questions%s への答えをご覧ください。",
+        "ViewUserGuides": "Piwik の設定方法と、効果的なデータ分析方法は、%1$suser guides%2$s をご確認ください。",
+        "VisitTheForums": "%sフォーラム%sにアクセスする",
+        "WantToThankConsiderDonating": "Piwik の素晴らしさを実感し、Piwik チームに感謝したいと思いますか ?"
     }
 }
