--- a/plugins/Goals/lang/de.json
+++ b/plugins/Goals/lang/de.json
@@ -10,6 +10,7 @@
         "BestKeywords": "Beste Umsätze nach Suchbegriffen:",
         "BestReferrers": "Beste Umsätze nach verweisenden Webseiten:",
         "CaseSensitive": "Groß-\/Kleinschreibung beachten",
+        "ChooseGoal": "Ziel wählen",
         "ClickOutlink": "auf einen Link zu einer externen Webseite geklickt wird",
         "ColumnAverageOrderRevenueDocumentation": "Der durchschnittliche Bestellwert ist der Gesamtumsatz aller Bestellungen geteilt durch die Anzahl der Bestellungen",
         "ColumnAveragePriceDocumentation": "Der durchschnittliche Umsatz für %s.",
