--- a/plugins/Goals/lang/fr.json
+++ b/plugins/Goals/lang/fr.json
@@ -61,6 +61,7 @@
         "GoalX": "Objectif %s",
         "HelpOneConversionPerVisit": "Si une page correspondant à cet objectif est actualisée ou vue plus d'une fois lors d'une visite, l'objectif ne pourra être suivi que la première fois la page a été chargée au cours de cette visite.",
         "IsExactly": "est exactement %s",
+        "LearnMoreAboutGoalTrackingDocumentation": "Apprenez en plus sur comment %s Suivre les Objectifs dans Piwik%s dans la documentation utilisateur.",
         "LeftInCart": "%s laissé(s) dans le panier",
         "Manually": "manuellement",
         "ManuallyTriggeredUsingJavascriptFunction": "Les objectifs sont déclenchés manuellement en utilisant l'API Javascript trackGoal()",
@@ -82,6 +83,7 @@
         "Products": "Produits",
         "ProductSKU": "Code Produit",
         "ReturningVisitorsConversionRateIs": "Le taux de conversion des visiteurs déjà venus est %s",
+        "SendEvent": "Envoyer un évènement",
         "SingleGoalOverviewDocumentation": "Ceci est un aperçu des conversions pour un seul Objectif. %s les lignes de tendance sous le graphique peuvent être agrandies en cliquant dessus.",
         "UpdateGoal": "Mettre à jour un objectif",
         "URL": "URL",
