--- a/plugins/Goals/lang/it.json
+++ b/plugins/Goals/lang/it.json
@@ -10,6 +10,7 @@
         "BestKeywords": "Le tue keyword che convertono meglio sono:",
         "BestReferrers": "I tuoi referer che convertono meglio sono:",
         "CaseSensitive": "Corrispondenza maiuscole e minuscole",
+        "ChooseGoal": "Scegli Goal",
         "ClickOutlink": "Cliccano su un Link a un sito esterno",
         "ColumnAverageOrderRevenueDocumentation": "Il valore medio ordini (average order value, AOV) è il ricavo totale di tutti gli ordini Ecommerce diviso per il numero di ordini.",
         "ColumnAveragePriceDocumentation": "Il ricavo medio per questo %s.",
