--- a/plugins/Goals/lang/pl.json
+++ b/plugins/Goals/lang/pl.json
@@ -9,8 +9,10 @@
         "BestKeywords": "Pochodzenie najlepszych słów kluczowych:",
         "BestReferrers": "Pochodzenie najlepszych serwisów internetowych jako odsyłających do nas:",
         "CaseSensitive": "dopasowanie czułości",
+        "ChooseGoal": "Wybierz cel",
         "ClickOutlink": "kliknij na link do zewnętrznej strony",
         "ColumnConversions": "Zmiany",
+        "ColumnPurchasedProductsDocumentation": "Ilość zakupionych produktów jest sumą ilości produktów sprzedawanych we wszystkich zamówień E-commerce.",
         "Contains": "zawiera %s",
         "ConversionRate": "%s współczynnik zmian",
         "Conversions": "%s zmian",
@@ -21,7 +23,11 @@
         "DefaultRevenue": "domyślnym przychodem z trafienia jest",
         "DefaultRevenueHelp": "Dla przykładu, formularz kontaktowy wypełniony przez odwiedzającego może być nawet wart średnio $10. Piwik pomaga więc zrozumieć i przeanalizować wszelkie zachowania odwiedzających.",
         "DeleteGoalConfirm": "Czy na pewno chcesz skasować te założenie %s?",
+        "DocumentationRevenueGeneratedByProductSales": "Sprzedaży produktu. Wyklucza opodatkowania, wysyłkę i zniżki",
         "Download": "pobierz plik",
+        "Ecommerce": "Ecommerce",
+        "EcommerceLog": "E-commerce Zaloguj",
+        "EcommerceOrder": "E-commerce zamów",
         "ExceptionInvalidMatchingString": "Jeżeli wybierasz 'dokładne dopasowanie', łańcuch dopasowujący musi być adresem URL zaczynającym się od %s. Na przykład, '%s'.",
         "ExternalWebsiteUrl": "adres zewnętrzny URL",
         "Filename": "nazwa pliku",
@@ -46,7 +52,12 @@
         "PageTitle": "tytuł strony",
         "Pattern": "Wzorzec",
         "PluginDescription": "Utwórz założenia i zobacz raporty o zmianach: zmianach w czasie, dochody z odwiedzin, zmian wynikających z przekierowań, ze słów kluczowych, itd.",
+        "ProductCategory": "Kategoria produktu",
+        "ProductName": "Nazwa produktu",
+        "Products": "Produkty",
+        "ProductSKU": "Produkt SKU",
         "ReturningVisitorsConversionRateIs": "Współczynnik przejść dla powracających odwiedzających wynosi %s",
+        "SendEvent": "Wyślij zdarzenie",
         "UpdateGoal": "Zaktualizuj założenie",
         "URL": "URL",
         "ViewAndEditGoals": "Zobacz i edytuj trafienia",
