--- a/plugins/ScheduledReports/lang/pl.json
+++ b/plugins/ScheduledReports/lang/pl.json
@@ -19,7 +19,10 @@
         "PleaseFindAttachedFile": "Prosimy odszukać w pliku załącznika twój %1$s raport dla %2$s.",
         "PleaseFindBelow": "Prosimy odszukać w poniższym %1$s raport %2$s.",
         "ReportFormat": "Format raportu",
+        "ReportHour": "Wyślij raport o",
         "ReportsIncluded": "Zawarte statystyki",
+        "ReportType": "Wyślij raport przez",
+        "ReportUpdated": "Raport uaktualniono",
         "SendReportNow": "Wyślij raport teraz",
         "SendReportTo": "Wyślij raport do",
         "SentToMe": "Wyślij do mnie",
