--- a/plugins/UserCountry/lang/nb.json
+++ b/plugins/UserCountry/lang/nb.json
@@ -198,6 +198,7 @@
         "country_nt": "Den nøytrale sona",
         "country_nu": "Niue",
         "country_nz": "New Zealand",
+        "country_o1": "Annet land",
         "country_om": "Oman",
         "country_pa": "Panama",
         "country_pe": "Peru",
@@ -293,6 +294,7 @@
         "Geolocation": "Geoposisjonering",
         "HowToInstallApacheModule": "Hvordan installerer jeg GeoIP-modulen for Apache?",
         "HowToInstallGeoIPDatabases": "Hvordan får jeg GeoIP databasene?",
+        "ISPDatabase": "ISP-database",
         "Location": "Lokasjon",
         "Organization": "Organisasjon",
         "PluginDescription": "Rapporterer landet for de besøkende.",
