--- a/plugins/UserCountry/lang/pl.json
+++ b/plugins/UserCountry/lang/pl.json
@@ -1,7 +1,10 @@
 {
     "UserCountry": {
+        "City": "Miasto",
+        "CityAndCountry": "%1$s, %2$s",
         "Continent": "Kontynent",
         "continent_afr": "Afryka",
+        "continent_amc": "Ameryka Środkowa",
         "continent_amn": "Ameryka Północna",
         "continent_ams": "Ameryka Południowa i Centralna",
         "continent_ant": "Antarktyda",
@@ -246,6 +249,7 @@
         "country_tf": "Francuskie Terytoria Południowe",
         "country_tg": "Togo",
         "country_th": "Tajlandia",
+        "country_ti": "Tybet",
         "country_tj": "Tadżykistan",
         "country_tk": "Tokelau",
         "country_tl": "Timor Wschodni",
@@ -282,8 +286,30 @@
         "country_zr": "Zair",
         "country_zw": "Zimbabwe",
         "DistinctCountries": "%s wyróżniających się krajów",
+        "DownloadingDb": "Pobieranie %s",
+        "GeoIPDatabases": "Baza danych GeoIP",
+        "Geolocation": "Geolokalizacja",
+        "getCountryDocumentation": "Ten raport pokazuje, w którym kraju był odwiedzający kiedy wchodził na twoją stronę.",
+        "getRegionDocumentation": "Ten raport pokazuje,w którym regionie był odwiedzający kiedy wchodził na twoją stronę.",
+        "HowToInstallApacheModule": "W jaki sposób zainstaluję moduł GeoIP dla Apache?",
+        "HowToInstallGeoIPDatabases": "W jaki sposób dostanę bazy GeoIP?",
+        "HowToInstallGeoIpPecl": "W jaki sposób zainstaluję rozszerzenie GeoIP PECL?",
+        "HowToInstallNginxModule": "W jaki sposób zainstaluję moduł GeoIP dla Nginx?",
+        "HowToSetupGeoIP": "Jak ustawić dokładną geolokalizację z GeoIP?",
+        "ISPDatabase": "Baza danych dostawców internetowych",
+        "IWantToDownloadFreeGeoIP": "Chcę ściągnąć darmową bazę GeoIP...",
+        "Latitude": "Szerokość",
         "Location": "Położenie",
+        "LocationDatabase": "Lokalizacja Bazy Danych",
+        "LocationProvider": "Lokalizacja Dostawcy",
+        "Longitude": "Długość",
+        "Organization": "Organizacja",
+        "OrgDatabase": "Baza Danych Organizacji",
+        "PiwikNotManagingGeoIPDBs": "Piwik nie zarządza obecnie żadną baza danych GeoIP.",
         "PluginDescription": "Raporty o krajach pochodzenia odwiedzających.",
-        "SubmenuLocations": "Położenia"
+        "Region": "Region",
+        "SetupAutomaticUpdatesOfGeoIP": "Ustaw automatyczne aktualizacje dla bazy danych GeoIP",
+        "SubmenuLocations": "Położenia",
+        "WidgetLocation": "Lokalizacja odwiedzającego"
     }
 }
