--- a/plugins/UserCountryMap/lang/nb.json
+++ b/plugins/UserCountryMap/lang/nb.json
@@ -4,6 +4,7 @@
         "Cities": "Byer",
         "Countries": "Land",
         "DaysAgo": "%s dager siden",
+        "GoalConversions": "%s målkonverteringer",
         "Hours": "timer",
         "HoursAgo": "%s timer siden",
         "map": "kart",
