--- a/plugins/UsersManager/lang/pl.json
+++ b/plugins/UsersManager/lang/pl.json
@@ -12,6 +12,7 @@
         "ExceptionAccessValues": "Parametr dostępu musi zawierać jedną z następujących wartości: [ %s ]",
         "ExceptionAdminAnonymous": "Nie możesz przyznać dostępu 'admina' dla użytkownika 'anonymous'.",
         "ExceptionDeleteDoesNotExist": "Konto takiego użytkownik '%s' nie istnieje, a więc nie może być skasowane.",
+        "ExceptionDeleteOnlyUserWithSuperUserAccess": "Usunięcie użytkownika '%s' jest niemożliwe.",
         "ExceptionEditAnonymous": "Konto użytkownika anonimowego nie może być zmienione czy skasowane. Jest stosowane przez Piwik by zdefiniować użytkownika, który się nie loguje. Dla przykładu, możesz uczynić swoje statystyki powszechnie publiczne, udzielając prawa 'podglądu' dla 'anonimowego' użytkownika.",
         "ExceptionEmailExists": "Użytkownik z takim adresem e-mail '%s' już istnieje.",
         "ExceptionInvalidEmail": "Adres e-mail nie posiada poprawnego formatu.",
@@ -23,12 +24,14 @@
         "ExcludeVisitsViaCookie": "Wyklucz swoje wizyty stosując ciasteczka cookie",
         "ForAnonymousUsersReportDateToLoadByDefault": "Dla użytkowników anonimowych, data raportu jako domyślna do wczytania",
         "IfYouWouldLikeToChangeThePasswordTypeANewOne": "Jeśli chcesz zmienić hasło, wpisz nowe. W innym przypadku pozostaw puste pole.",
+        "LastSeen": "Ostatnio widziany",
         "MainDescription": "Możesz zadecydować, którzy użytkownicy będą mieć dostęp do Piwik w twoim serwisie internetowym. Możesz także ustawić prawa dostępu do całości serwisu od razu.",
         "ManageAccess": "Zarządzanie uprawnieniami dostępu",
         "MenuAnonymousUserSettings": "Konfiguracja użytkownika anonimowego",
         "MenuUsers": "Użytkownicy",
         "MenuUserSettings": "Konfiguracja użytkownika",
         "NoteNoAnonymousUserAccessSettingsWontBeUsed2": "Uwaga: Nie możesz zmienić konfiguracji tej sekcji ponieważ nie posiadasz żadnych stron, do których osoba anonimowa miałąby dostęp.",
+        "NoUsersExist": "Nie ma jeszcze żadnych użytkowników.",
         "PluginDescription": "Administracja użytkownikami w Piwik: dodanie nowego użytkownika, edycja istniejącego, aktualizacja uprawnień. Wszystkie działania są również dostępne poprzez interfejs API.",
         "PrivAdmin": "Admin",
         "PrivNone": "Brak dostępu",
