--- a/plugins/CoreAdminHome/lang/it.json
+++ b/plugins/CoreAdminHome/lang/it.json
@@ -28,6 +28,8 @@
         "JSTracking_CodeNote": "Assicuratevi che questo codice si trovi in ognuna delle pagine del vostro sito prima del tag %1$s.",
         "JSTracking_CustomCampaignQueryParam": "Utilizza i nomi dei parametri di query personalizzati per il nome della campagna e parola chiave",
         "JSTracking_CustomCampaignQueryParamDesc": "Nota: %1$sPiwik rivelerà automaticamente i parametri di Google Analytics.%2$s",
+        "JSTracking_DisableCookies": "Disabilita tutti i cookies di tracking",
+        "JSTracking_DisableCookiesDesc": "Disabilita tutti i cookies proprietari. I cookies esistenti di Piwik verranno cancellati alla prossima visualizzazione della pagina.",
         "JSTracking_EnableDoNotTrack": "Abilita l'individuazione DoNotTrack lato client",
         "JSTracking_EnableDoNotTrack_AlreadyEnabled": "Nota: E' stato abilitato il supporto DoNotTrack lato server, così questa opzione non avrà effetto.",
         "JSTracking_EnableDoNotTrackDesc": "In questo modo le richieste di tracciamento non verranno inviate se il visitatore non vuole essere tracciato.",
