--- a/plugins/CorePluginsAdmin/lang/pl.json
+++ b/plugins/CorePluginsAdmin/lang/pl.json
@@ -45,28 +45,48 @@
         "MissingRequirementsNotice": "Zaktualizuj %1$s %2$s do nowszej wersji, %1$s %3$s jest wymagana.",
         "NoPluginsFound": "Nie znaleziono pluginów",
         "NotAllowedToBrowseMarketplacePlugins": "Możesz przeglądać listę plugin'ów które mogą zostać zainstalowane aby zmodyfikować lub rozszerzyć Twoją platformę Piwik. Skontaktuj się z administratorem jeśli chcesz zainstalować któryś z nich.",
+        "NotAllowedToBrowseMarketplaceThemes": "Możesz przeglądać listę tematów, które mogą być zainstalowane, aby dostosować wygląd platformy Piwik. W celu instalacji porszę skontaktować się z administratorem.",
         "NoThemesFound": "Nie znaleziono szablonów",
+        "NoZipFileSelected": "Proszę wybrać plik ZIP.",
+        "NumDownloadsLatestVersion": "Ostatnia wersja: %s Pobrań",
         "NumUpdatesAvailable": "%s aktualizacji dostępnych",
         "Origin": "Pochodzenie",
+        "OriginCore": "Jądro",
         "PluginDescription": "Interfejs zarządzania wtyczkami.",
         "PluginHomepage": "Wtyczka strony głównej",
+        "PluginKeywords": "Słowa kluczowe",
         "PluginNotCompatibleWith": "%1$s jest niekompatybilny z %2$s.",
+        "PluginRequirement": "%1$s wymaga %2$s.",
         "PluginsManagement": "Zarządzanie wtyczkami",
+        "PluginUpdateAvailable": "Używasz wersji %s, nowa wersja %s jest dostępna.",
         "PluginVersionInfo": "%1$s z %2$s",
+        "PluginWebsite": "Strona WWW",
         "Screenshots": "Screenshoty",
+        "SortByAlpha": "alfa",
         "SortByNewest": "najnowsze",
+        "SortByPopular": "popularne",
         "Status": "Status",
+        "StepDownloadingPluginFromMarketplace": "Pobieranie wtyczki ze Sklepu",
+        "StepDownloadingThemeFromMarketplace": "Pobieranie szablonu ze Sklepu",
+        "StepPluginSuccessfullyInstalled": "Wtyczka %1$s %2$s została pomyślnie zainstalowana.",
         "StepReplaceExistingPlugin": "Zastępowanie istniejącego pluginu",
+        "StepReplaceExistingTheme": "Zastępowania obecnego motywu",
         "StepThemeSuccessfullyInstalled": "Pomyślnie zainstalowano szablon %1$s %2$s.",
         "StepUnzippingPlugin": "Rozpakowywanie pluginu",
+        "StepUnzippingTheme": "Rozpakowuję szablon",
         "SuccessfullyActicated": "Pomyślnie aktywowano <strong>%s<\/strong>.",
+        "Support": "Wsparcie",
         "TeaserExtendPiwik": "Rozszerz Piwik o pluginy i szablony",
+        "TeaserExtendPiwikByPlugin": "Rozszerz Piwik poprzez instalację nowych wtyczek",
+        "TeaserExtendPiwikByUpload": "Rozbuduj Piwik poporzez wgranie plików ZIP",
         "Theme": "Szablon",
         "Themes": "Szablony",
         "ThemesManagement": "Zarządzaj szablonami",
         "Updated": "Zaktualizowano",
+        "UpdatingPlugin": "Aktualizacja %s",
         "UploadZipFile": "Wyślij plik ZIP",
         "Version": "Wersja",
+        "ViewRepositoryChangelog": "Zobacz zmiany",
         "Websites": "Serwisy"
     }
 }
