--- a/plugins/DBStats/lang/pl.json
+++ b/plugins/DBStats/lang/pl.json
@@ -2,6 +2,7 @@
     "DBStats": {
         "DatabaseUsage": "Stopień wykorzystania bazy danych",
         "DataSize": "Rozmiar danych",
+        "EstimatedSize": "szacunkowa wielkość",
         "IndexSize": "Rozmiar indeksu",
         "LearnMore": "Aby dowiedzieć się więcej o tym, jak Piwik przetwarza dane i jak konfigurować go do pracy z serwisami o średnim i wysokim ruchu na stronach, sprawdź dokumentację %s.",
         "MainDescription": "Piwik przechowuje wszystkie dane analityki statystycznej stron w bazie danych MySQL serwera. Obecnie jego tabele zajmują %s.",
