--- a/plugins/Feedback/lang/pl.json
+++ b/plugins/Feedback/lang/pl.json
@@ -6,9 +6,12 @@
         "LearnWaysToParticipate": "Poznaj wszystkie sposoby %s uczestnictwa%s",
         "ManuallySendEmailTo": "Prosimy ręcznie wysłać swoją wiadomość",
         "PluginDescription": "Wyślij swoje opinie do zespołu Piwik. Podziel się swoimi pomysłami i sugestiami z nami!",
+        "PrivacyClaim": "Piwik respektuje twoją %1$sprywatność%2$s i oddaje ci pełną kontrolę nad twoimi danymi.",
+        "RateFeatureThankYouTitle": "Dziękujemy za ocenę '%s'!",
         "SendFeedback": "Wyślij opinię",
         "SpecialRequest": "Czy masz wyjątkowe życzenia, które chcesz przekazać dla ekipy programistów z Piwik?",
         "ThankYou": "Dziękujemy za pomoc, która pozwala uczynić statystyki Piwik jeszcze lepszymi!",
-        "VisitTheForums": "Odwiedź %s forum%s"
+        "VisitTheForums": "Odwiedź %s forum%s",
+        "WantToThankConsiderDonating": "Uważasz, że Piwik jest świetny i chcesz nam podziękować?"
     }
 }
