--- a/plugins/Installation/lang/pl.json
+++ b/plugins/Installation/lang/pl.json
@@ -1,5 +1,7 @@
 {
     "Installation": {
+        "CannotConnectToDb": "Nie można połączyć się z bazą danych",
+        "CollaborativeProject": "Piwik jest wspólnym projetem, tworzonym z miłością przez ludzi z całego świata.",
         "ConfigurationHelp": "Twój plik konfiguracyjny Piwik wydaje się nieskonfigurowany. Możesz również usunąć config\/config.ini.php i powtórzyć instalację, lub naprawić konfigurację połączenia z bazą danych.",
         "ConfirmDeleteExistingTables": "Czy masz pewność, że chcesz skasować tabele: %s ze swojej bazy danych? OSTRZEŻENIE: DANE Z TYCH TABEL NIE ZOSTANĄ ODTWORZONE CZY ZABEZPIECZONE!",
         "Congratulations": "Gratulacje",
@@ -15,20 +17,28 @@
         "DatabaseSetupTablePrefix": "prefix tabel",
         "Email": "e-mail",
         "Extension": "rozszerzenia",
+        "Filesystem": "System plików",
         "GoBackAndDefinePrefix": "Cofnij się i zdefiniuj obowiązujący Prefix dla tabel",
+        "HappyAnalysing": "Powodzenia!",
         "Installation": "Instalacja",
         "InstallationStatus": "Status postępu instalacji",
         "LargePiwikInstances": "Pomoc w przypadku dużych instalacji z Piwik",
         "Legend": "Legenda",
+        "NfsFilesystemWarning": "Twój system używa systemu plików NFS",
         "NoConfigFound": "Plik konfiguracyjny Piwik nie został odnaleziony, a ty próbujesz uzyskać dostęp do strony Piwik.<br \/><b>  » Możesz <a href='index.php'>zainstalować statystyki Piwik teraz<\/a><\/b><br \/><small>Jeżeli zainstalowałeś Piwik poprzednio i masz swoje tabele w bazie danych, nie przejmuj się, możesz uzyć tych samych tabel i zachować istniejące w nich dane!<\/small>",
+        "NotSupported": "nie obsługiwane",
         "Optional": "Opcionalnie",
         "Password": "hasło",
         "PasswordDoNotMatch": "hasło jest nieprawidłowe",
         "PasswordRepeat": "hasło (ponownie)",
         "PercentDone": "%s %% wykonano",
+        "PiwikOrgNewsletter": "Wyślij mi wiadomość email z głównymi aktualizacjami społeczności Piwik",
         "PleaseFixTheFollowingErrors": "Prosimy naprawić następujące błędy",
         "PluginDescription": "Proces instalacji statystyk Piwik. Instalację wykonuje się zazwyczaj tylko raz. Jeżeli plik konfiguracyjny znajdujący się w config\/config.inc.php zostaje skasowany, proces instalacji rozpocznie się od nowa.",
         "Requirements": "Wymagania systemu Piwik",
+        "RestartWebServer": "Po dokonaniu tych zmian, zrestartuj swój serwer.",
+        "ReusingTables": "Ponowne użycie Tabel",
+        "SeeBelowForMoreInfo": "Poniżej znajdziesz więcej informacji.",
         "SetupWebsite": "Konfiguracja portalu",
         "SetupWebsiteError": "Pojawił się błąd podczas dodawania adresu strony",
         "SetupWebSiteName": "nazwa portalu",
@@ -37,10 +47,12 @@
         "SiteSetupFootnote": "UWAGA: Nowe strony do śledzenia będzie mozna dodawać dopiero po zakończeniu instalacji Piwik'a",
         "SuperUser": "Super Użytkownik",
         "SuperUserLogin": "login super użytkownika",
+        "SuperUserSetupError": "Wystąpił błąd podczas dodawania Super User",
         "SuperUserSetupSuccess": "Konto Super Użytkownika utworzono pomyślnie!",
         "SystemCheck": "Sprawdzenie systemu",
         "SystemCheckAutoUpdateHelp": "Uwaga: automatyczna aktualizacja statystyk Piwik wymaga praw do zapisu w folderze Piwik i w jego podkatalogach.",
         "SystemCheckCreateFunctionHelp": "Piwik używa funkcji anonimizujących dla wywołań zwrotnych.",
+        "SystemCheckCronArchiveProcessCLI": "Zarządzaj procesami z wiersza poleceń",
         "SystemCheckDatabaseHelp": "Piwik wymaga do prawidłowego działania również rozszerzeń MYSQLI lub jednocześnie działania rozszerzeń PDO i pdo_mysql.",
         "SystemCheckDebugBacktraceHelp": "Podgląd::czynnik ten nie będzie zdolny do wytworzenia podglądu w wywołanym module.",
         "SystemCheckError": "Wystąpił błąd - powinien zostać naprawiony przed dalszym działaniem",
@@ -48,6 +60,7 @@
         "SystemCheckExtensions": "Pozostałe wymagane rozszerzenia",
         "SystemCheckFileIntegrity": "Integralność pliku",
         "SystemCheckFunctions": "Wymagane funkcje",
+        "SystemCheckGDFreeType": "GD > 2.x + Freetype (graphics)",
         "SystemCheckGDHelp": "Linie przerywane (mała grafika sparklines) nie będzie wyświetlana.",
         "SystemCheckGlobHelp": "Ta wbudowana funkcja została wyłączona przez twój hosting. Piwik może podjąć próbę jej emulowania, ale może napotkać kolejne ograniczenia związane z bezpieczeństwem. Będzie to miało również wpływ na wydajność funkcjonowania systemu.",
         "SystemCheckGzcompressHelp": "Musisz włączyć rozszerzenie zlib i funkcję gzcompress.",
@@ -55,6 +68,7 @@
         "SystemCheckIconvHelp": "Potrzebujesz skonfigurować i przebudować środowisko PHP, z włączonym wsparciem dla \"iconv\", --with-iconv.",
         "SystemCheckMailHelp": "Informacje zwrotne i wiadomości o utraconych hasłach nie będą mogły zostać wysłane przy pomocy funkcji mail().",
         "SystemCheckMbstring": "mbstring",
+        "SystemCheckMbstringHelp": "Rozszerzenie mbstring jest wymagane do obsługi znaków wielobajtowych w interfejsie użytkownika i API odpowiedzi. Ponadto należy sprawdzić, mbstring.func_overload jest ustawiony na \"0\" w pliku php.ini.",
         "SystemCheckMemoryLimit": "Limit pamięci",
         "SystemCheckMemoryLimitHelp": "Na stronach o wysokim ruchu, proces archiwizacji może wymagać więcej pamięci niż obecnie dostępna. Jeżeli okaże się to konieczne, zmień wielkość memory_limit w pliku php.ini.",
         "SystemCheckOpenURL": "Otwórz URL",
@@ -67,6 +81,7 @@
         "SystemCheckPhp": "wersja PHP",
         "SystemCheckPhpPdoAndMysqli": "Więcej informacji znajdziesz na: %1$sPHP PDO%2$s i %3$sMYSQLI%4$s.",
         "SystemCheckSplHelp": "Potrzebujesz skonfigurować i przebudować środowisko PHP z włączoną (domyślnie) Standardową Biblioteką PHP (SPL).",
+        "SystemCheckSummaryThereWereWarnings": "Są pewne problemy z systemem. Piwik będzie działać, ale mogą wystąpić drobne problemy.",
         "SystemCheckTimeLimitHelp": "Na stronach o dużym ruchu, działanie i archiwizacja może wymagać więcej czasu niż jest dostępny. Jeżeli okaże się to konieczne, zmień polecenie max_execution_time w pliku php.ini.",
         "SystemCheckTracker": "Status śledzenia",
         "SystemCheckTrackerHelp": "Żądanie GET wymagana przez piwik.php nie zadziałało. Spróbuj dodać ten adres URL do tzw. whitelistingu z mod_security i uwierzytelniania HTTP.",
@@ -89,6 +104,7 @@
         "TablesWithSameNamesFound": "Pewne %1$s tabele w twojej bazie danych %2$s mają takie same nazwy jak tabele które Piwik stara się utworzyć",
         "Timezone": "strefa czasowa",
         "Welcome": "Witaj!",
-        "WelcomeHelp": "<p>Piwik jest systemem analityki statystyk stron w oparciu o wolne oprogramowanie open source, które zapewnia bezpośrednie pozyskanie informacji o odwiedzinach danego serwisu www.<\/p><p>Proces ten jest podzielony na kilka łatwych kroków, obecnie w ilości: %s i zajmie około 5 minut.<\/p>"
+        "WelcomeHelp": "<p>Piwik jest systemem analityki statystyk stron w oparciu o wolne oprogramowanie open source, które zapewnia bezpośrednie pozyskanie informacji o odwiedzinach danego serwisu www.<\/p><p>Proces ten jest podzielony na kilka łatwych kroków, obecnie w ilości: %s i zajmie około 5 minut.<\/p>",
+        "WelcomeToCommunity": "Witamy w społeczności Piwik"
     }
 }
