--- a/plugins/LanguagesManager/lang/fr.json
+++ b/plugins/LanguagesManager/lang/fr.json
@@ -1,6 +1,7 @@
 {
     "LanguagesManager": {
         "AboutPiwikTranslations": "À propos des traductions de Piwik",
-        "PluginDescription": "Ce plugin affichera la liste des langues disponibles pour l'interface de Piwik. Le langage sélectionné sera sauvegardé dans les préférences de chaque utilisateur."
+        "PluginDescription": "Ce plugin affichera la liste des langues disponibles pour l'interface de Piwik. Le langage sélectionné sera sauvegardé dans les préférences de chaque utilisateur.",
+        "TranslationSearch": "Recherche de traduction"
     }
 }
