--- a/plugins/MultiSites/lang/fr.json
+++ b/plugins/MultiSites/lang/fr.json
@@ -2,6 +2,7 @@
     "MultiSites": {
         "Evolution": "Évolution",
         "LoadingWebsites": "Chargement des sites",
+        "Pagination": "%s - %s de %s",
         "PluginDescription": "Affiche le sommaire\/les statistiques multi-site. Actuellement maintenu comme un plugin Piwik cœur.",
         "TopLinkTooltip": "Comparez les statistiques pour tous vos sites web."
     }
