--- a/plugins/MultiSites/lang/pl.json
+++ b/plugins/MultiSites/lang/pl.json
@@ -1,6 +1,7 @@
 {
     "MultiSites": {
         "Evolution": "Postęp",
+        "LoadingWebsites": "Ładowanie stron",
         "PluginDescription": "Wyświetla wielostronicowe podsumowania\/statystyki. Obecnie zastosowane jako wtyczka jądra Piwik."
     }
 }
