--- a/plugins/UserCountryMap/lang/fr.json
+++ b/plugins/UserCountryMap/lang/fr.json
@@ -20,6 +20,8 @@
         "ShowingVisits": "Visites géo-localisées des derniers",
         "Unlocated": "<b>%s<\/b> %p des dernières visites de %c n'ont pas pu être géo-localisées.",
         "VisitorMap": "Carte du visiteur",
+        "WithUnknownCity": "%s avec une ville inconnue",
+        "WithUnknownRegion": "%s avec une région inconnue",
         "WorldWide": "Mondialement"
     }
 }
