--- a/plugins/UserCountryMap/lang/pl.json
+++ b/plugins/UserCountryMap/lang/pl.json
@@ -1,5 +1,21 @@
 {
     "UserCountryMap": {
-        "map": "mapa"
+        "Cities": "Miasta",
+        "Countries": "Państw",
+        "DaysAgo": "%s dni temu",
+        "Hours": "godzin",
+        "HoursAgo": "%s godzin temu",
+        "map": "mapa",
+        "Minutes": "minut",
+        "None": "Brak",
+        "NoVisit": "Brak wizyt",
+        "Regions": "Regiony",
+        "Searches": "%s wyszukań",
+        "Seconds": "sekund",
+        "SecondsAgo": "%s sekund temu",
+        "VisitorMap": "Mapa Odwiedzin",
+        "WithUnknownCity": "%s z nieznanego miasta",
+        "WithUnknownRegion": "%s z nieznanego regionu",
+        "WorldWide": "World-Wide"
     }
 }
